@@ -1,5 +1,10 @@
 Release Note
 
+* 2/10/2015
+  * modified MW to escape <>
+  * removed data locality check from AtlasPJB
+  * fixed JG to set correct coreCount for pmerge
+
 * 2/6/2015
   * added submitting messages to JG
 
